Fix CodeMirror height
This removes a small gap between the bottom of the editor and the top of
the navbar below it in Chrome/Chromium.

--- a/style.less
+++ b/style.less
@@ -78,7 +78,7 @@ body {
 
 .CodeMirror {
 	border: 1px solid #ccc;
-	height: auto !important;
+	height: 100%;
 }
 
 .CodeMirror-scroll {
